--- a/css/blog.css
+++ b/css/blog.css
@@ -3,6 +3,33 @@
   font-family: 'Courier New', Courier, monospace;
 }
 
+.hidden {
+  opacity: 0;
+  filter: blur(3px);
+  transform: translatex(-50%);
+  transition: all 1.5s;
+  }
+  
+
+  .show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translatex(0);
+  }
+
+
+  .show:nth-child(2){
+    transition-delay: 200ms;
+  }
+  .show:nth-child(3){
+    transition-delay: 400ms;
+  }
+  .show:nth-child(4){
+    transition-delay: 600ms;
+  }
+  .show:nth-child(5){
+    transition-delay: 800ms;
+  }
 .darkblue {
     background-color: #10162F;
     min-height: 100vh;
@@ -26,9 +53,10 @@ section {
   justify-content: center;
   margin: auto auto;
   color: rgb(255, 255, 255);
-  width: 70%;
+  width: 50%;
   height: 100vh;
   overflow: hidden;
+
   }
 
   section   .fa-github {
@@ -67,25 +95,25 @@ justify-content: flex-start;
  
   
 #mainPhoto{
-max-width: 30%;
+max-width: 45%;
 height: auto;
 width: auto;
 margin: 0 auto;
 object-fit: contain;
-object-fit: contain;
+
 }
 
 
 .screenshot2 {
   margin-top: 15px;
-  width: 80%;
+  width: 100%;
 }
 .screenshot3 {
   margin-top: 20px;
-  width: 25%;
+  width: 33%;
 }
 .screenshot4 {
-  width: 75%;
+  width: 85%;
 }
 
 
@@ -104,7 +132,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 5vh;
     opacity: 0.8;
     z-index: 999; 
   }
