--- a/css/blog.css
+++ b/css/blog.css
@@ -54,7 +54,7 @@ section {
   margin: auto auto;
   color: rgb(255, 255, 255);
   width: 50%;
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
 
   }
