--- a/css/main.css
+++ b/css/main.css
@@ -9,173 +9,137 @@
 body {
   /* #10162F; */
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  min-height: 100vh;
-  min-width: 100vh;
   background-color: #ffffff;
-  margin: 0;
+  padding: 0;
+  margin: 5vh 0 0 0;
   width: 100%;
-  }
+  height: 95%;
 
-  img.hidden {
-    opacity: 0;
-    filter: blur(3px);
-    transform: translatex(-100%);
-    transition: all 1s;
   }
-  
-  article.hidden {
-    opacity: 0;
-    filter: blur(3px);
-    transform: translatex(100%);
-    transition: all 1s;
-  }
-  
-  img.show {
-    opacity: 1;
-    filter: blur(0);
-    transform: translatex(0);
-  }
-  
-  article.show {
-    opacity: 1;
-    filter: blur(0);
-    transform: translatex(0);
-  }
-  
-  
-    .show:nth-child(2){
-      transition-delay: 200ms;
-    }
-    .show:nth-child(3){
-      transition-delay: 500ms;
-    }
- 
-
-  
-
-section {
-  background-color: #ffffff;
-  width: 100%;
-  height: 100%;
-  margin: 5vh auto;
- object-fit: contain;
-}
-
   .aboutMe{
     margin-top: 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 100vh;
-    height: 100vh;
-
-    object-fit: contain;
+    height: 100%;
+    min-height: 100vh;
+    width: 100%;
   }
 
-  .aboutMe article{
+  @media screen and (max-width: 800px){
+    .aboutMe {
+      flex-direction: column;
+    }
+  
+    .aboutMe img{
+      width: 98%; /* Set the width to 100% to make it adjust to the container */
+      height: auto; /* Set the height to auto to maintain aspect ratio */
+      border-top-right-radius: 10%;
+      border-top-left-radius: 10%;
+      border-bottom-left-radius: 0;
+    }
+    .aboutMe article{
+      width: 98%; /* Set the width to 100% to make it adjust to the container */
+      height: auto; /* Set the height to auto to maintain aspect ratio */
+      padding: 0;
+      border-bottom-left-radius: 10%;
+      border-bottom-right-radius: 10%;
+      border-top-right-radius: 0%;
+    }
+
+    
+  }
+
+ 
+
+   article{
     z-index: 1; 
     display: flex;
-    align-items: left center;
-    justify-content: top;
     flex-direction: column;
+    justify-content: center;
+    justify-items: center;
     box-shadow: 0 0 5px gray;
     background-color: #fff;
-    padding:50px 50px 0px 50px;
-    width: 50vh;
-    height: 50vh;
-    min-height: 563px;
-    min-width: 563px;
-  
-    overflow: auto;
-    object-fit: contain;
-    box-sizing: border-box;
+    width: 20vw;
+    height: 20vw;
+    border-top-right-radius: 10%;
+    padding: 3vw 3vw 3vw 3vw;
+    overflow: hidden;
+
+  }
+  img{
+    z-index: 0; 
+    background-color: #ffffff;
+    box-shadow: 0 0 10px gray;
+    border-bottom-left-radius: 10%;
+    width: 26vw;
+    height: 26vw;
+
 
   }
   .aboutMe h1{
-   margin: 0;
+   margin: 2vh 0 0 0;
    margin-left: 20px;
-   font-size: 1.5em;
+   font-size: 3vh;
+   font-weight: 500;
    border-bottom: solid 2px black;
-   margin-right: 50px;
+   margin-right: 5vw;
   }
-  .aboutMe h6{
-    margin-top: 20px;
-    margin-left: 30px;
-  
-    
-   }
   .aboutMe p{
-    padding: 0px 0px 0px 0px;
-    margin-bottom: 0px;
-    font-size: 1em;
+    margin: 2vh 0 0 1.5vh;
+    font-size: 1.5vh;
     }
 
-  .aboutMe img{
-   z-index: 0; 
-  background-color: #ffffff;
-  margin-top: 20px;
-  box-shadow: 0 0 10px gray;
-  margin:0;
-  width: 50vh;
-  height: 50vh;
-  min-height: 563px;
-  min-width: 563px;
  
-  object-fit: contain;
-  
-
- 
-}
-strong {
-  margin-left: 20px;
-}
   
 .aboutMe a{
   width: 13%;
   margin-left: 15px;
   border-radius: 20px;
-  border: solid rgb(71, 71, 71) 2px;
+  border: solid rgb(71, 71, 71) 1px;
   padding: 0px;
 }
 
 
 
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td {
-  border: none;
-  padding: px;
-  text-align: center;
-  vertical-align: middle;
-}
-
-th {
-  font-weight: bold;
-  color: white;
-  background-color: gray;
-  padding: 10px;
-  text-align: center;
-}
-ul li {
-  padding: 0px;
-}
 
 
-.filled {
-  background-color: lightblue;
-  color: white;
+
+
+
+img.hidden {
+  opacity: 0;
+  filter: blur(3px);
+  transform: translatex(-100%);
+  transition: 1s;
 }
+
+article.hidden {
+  opacity: 0;
+  filter: blur(3px);
+  transform: translatex(100%);
+  transition: 1s;
+}
+
+img.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translatex(0);
+}
+
+article.show {
+  opacity: 1;
+  filter: blur(0);
+  transform: translatex(0);
+}
+
+
+
 
 
 /*NAAAAAV */
-
-
 nav {
   display: flex;
   justify-content:flex-end;
@@ -236,12 +200,15 @@ nav a.active {
 footer {
   width: 100%;
   margin: 0 0 0 0;
-  height: 20vh;
+  height: 10vh;
+  margin: 1vh 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(143, 143, 143);
   box-shadow: 0 0 5px gray;
+  overflow: hidden;
+  
 }
 
 footer p {
