--- a/css/resume.css
+++ b/css/resume.css
@@ -7,7 +7,8 @@
   body{
     background-color: #ffffff;
     min-height: 100vh;
-    margin: 5vh 0px auto auto;
+    width: 100%;
+    margin: 5vh 0px 0 0;
     color: rgb(0, 0, 0);
   }
 
@@ -45,13 +46,9 @@
     justify-content: center;
     margin: auto auto;
     color: hsla(0, 0%, 0%, 0.26);
-    width: 70%;
-    height: 100vh;
+    width: 100%;
+    min-height: 100vh;
     overflow: hidden;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
-  border-image: linear-gradient(to bottom, rgb(0, 0, 0), #f90, rgb(129, 182, 30), rgb(103, 59, 204), rgb(0, 0, 0)) 1;
-  border-image-slice: 3;
   padding: 20px;
   overflow: hidden;
   
@@ -70,7 +67,6 @@
         width: 25%;
         box-shadow: 0 0 10px gray;
     }
-
 
   h1{
     margin: 10px auto;
@@ -141,6 +137,7 @@
       height: 20vh;
       display: flex;
       justify-content: center;
+      width: 100%;
       align-items: center;
       background-color: rgb(143, 143, 143);
       box-shadow: 0 0 5px gray;
