--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,7 @@
 * {
   color: #ffffff;
   font-family: 'Courier New', Courier, monospace;
+
 }
 
 .hidden {
@@ -40,8 +41,11 @@
 body{
   background-color: #10162F;
   min-height: 100vh;
-  margin: 50px 0px auto auto;
+  width: 100%;
+  height: auto;
+  margin: 50px 0px 0 auto;
   color: rgb(255, 255, 255);
+
 }
 
 
@@ -56,7 +60,6 @@ section {
   width: 50%;
   min-height: 100vh;
   overflow: hidden;
-
   }
 
   section   .fa-github {
@@ -122,40 +125,47 @@ h1{
 }
 
   /* FOOTER AND NAV FOR PROJECT*/
+/*NAAAAAV */
 nav {
-    display: flex;
-    justify-content:flex-end;
-    justify-content: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    background-color: #ffffff;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5vh;
-    opacity: 0.8;
-    z-index: 999; 
-  }
+  display: flex;
+  justify-content:flex-end;
+  justify-content: center;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  background-color: #ffffff;
 
-  .nav-left{
-     margin-right: auto;
-     font-size: 25px;
-  }
-  nav a {
-    display: flex;
-    align-items: center;
-    border: 0px solid; /* Add a border to the buttons */
-    border-radius: 15px; /* Add rounded corners to the buttons */
-    color: rgb(0, 0, 0);
-   /* background-color: #323f69;
-   */
-    font-size: 18px;
-    font-weight: 400;
-    text-decoration: none;
-    padding: 15px 10px 10px 15px;
-    margin-left: 5px;
-    margin-bottom: 2;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin: 0;
+  height: 5vh;
+  opacity: 0.8;
+  z-index:999; 
+
+}
+
+.nav-left{
+   margin-right: auto;
+   font-size: 25px;
+
+}
+nav a {
+  display: flex;
+  align-items: center;
+
+
+
+  color: rgb(0, 0, 0);
+ /* background-color: #323f69;
+ */
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: none;
+  padding: 15px 10px 10px 15px;
+  margin-left: 5px;
+  margin-bottom: 2;
+
+}
   nav a.nav-right:last-child {
     padding-right: 20px;
   }
