--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,9 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-
-
+html {
+  width: 100%;
+}
 /* BODY                */
 body {
   /* #10162F; */
@@ -15,8 +16,10 @@ body {
   margin: 5vh 0 0 0;
   width: 100%;
   height: 95%;
-
+ 
   }
+
+
   .aboutMe{
     margin-top: 0px;
     display: flex;
@@ -28,30 +31,36 @@ body {
     width: 100%;
   }
 
-  @media screen and (max-width: 800px){
+  @media screen and (max-width: 700px){
     .aboutMe {
       flex-direction: column;
+
     }
   
     .aboutMe img{
       width: 98vw; /* Set the width to 100% to make it adjust to the container */
       height: 98vw; /* Set the height to auto to maintain aspect ratio */
-      border-top-right-radius: 10%;
-      border-top-left-radius: 10%;
-      border-bottom-left-radius: 0;
+
+      border-bottom-left-radius: 10%;
+      border-bottom-right-radius: 10%;
+      border-top-right-radius: 0%;
     }
     .aboutMe article{
       width: 98vw; /* Set the width to 100% to make it adjust to the container */
       height: 98vw; /* Set the height to auto to maintain aspect ratio */
       padding: 0;
-      border-bottom-left-radius: 10%;
-      border-bottom-right-radius: 10%;
-      border-top-right-radius: 0%;
+      border-top-right-radius: 10%;
+      border-top-left-radius: 10%;
+      border-bottom-left-radius: 0;
+
+
     }
     
     .footer {
       display: none;
+  
     }
+
   }
 
  
@@ -66,18 +75,20 @@ body {
     background-color: #fff;
     width: 20vw;
     height: 20vw;
-    border-top-right-radius: 10%;
+    border-bottom-left-radius: 10%;
     padding: 3vw 3vw 3vw 3vw;
+ 
     overflow: hidden;
-
   }
   img{
     z-index: 0; 
     background-color: #ffffff;
     box-shadow: 0 0 10px gray;
-    border-bottom-left-radius: 10%;
+
+    border-top-right-radius: 10%;
     width: 26vw;
     height: 26vw;
+  
 
 
   }
@@ -88,10 +99,12 @@ body {
    font-weight: 500;
    border-bottom: solid 2px black;
    margin-right: 5vw;
+
   }
   .aboutMe p{
     margin: 2vh 0 0 1.5vh;
     font-size: 1.5vh;
+  
     }
 
  
@@ -102,6 +115,7 @@ body {
   border-radius: 20px;
   border: solid rgb(71, 71, 71) 1px;
   padding: 0px;
+
 }
 
 
@@ -148,22 +162,27 @@ nav {
   justify-content: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
   background-color: #ffffff;
+
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
+  margin: 0;
   height: 5vh;
   opacity: 0.8;
-  z-index: 999; 
+  z-index:1; 
+
 }
 
 .nav-left{
    margin-right: auto;
    font-size: 25px;
+
 }
 nav a {
   display: flex;
   align-items: center;
+
 
 
   color: rgb(0, 0, 0);
@@ -175,14 +194,17 @@ nav a {
   padding: 15px 10px 10px 15px;
   margin-left: 5px;
   margin-bottom: 2;
+
 }
 nav a.nav-right:last-child {
   padding-right: 20px;
+
 
 }
 nav a.nav-left:first-child {
   padding-left: 20px;
   text-decoration: underline;
+
 }
 
 nav a:hover {
@@ -190,11 +212,13 @@ nav a:hover {
   color: #5533ff;
   opacity: 0.8;
   text-decoration: underline;
+
 }
 
 nav a.active {
   border-color: #000; /* Change the border color for the active button */
   color: #5533ff;
+
 }
 
 
@@ -209,17 +233,19 @@ footer {
   align-items: center;
   background-color: rgb(143, 143, 143);
   box-shadow: 0 0 5px gray;
-  overflow: hidden;
-}
 
+
+}
 footer p {
-  margin: 0px 10px 0px 27px;
+  margin: 0px 0px 0px 0px;
+
 
 }
 
 footer a {
   color: rgb(0, 0, 0);
   text-decoration: none;
+
 }
 
 footer ul {
@@ -227,16 +253,19 @@ footer ul {
   margin: 0px 0px 0px 0px;
   padding: 0;
   display: flex;
+
 }
 
 footer li {
-  margin: 10px 0px 0px 20px;
+  margin: 10px 0px 0px 10px;
+  border: solid 1px red;
 }
 
  .fa-twitter,
  
  .fa-github {
   font-size: 1.5em;
+  
 }
 .fa-bars {
   font-size: 1.3em;
